--- a/ctf/index.html
+++ b/ctf/index.html
@@ -12,11 +12,14 @@
 <body>
 <div id="content">
 <h1 class="title">Writeups de CTFs</h1>
-<div id="outline-container-orge62127f" class="outline-2">
-<h2 id="orge62127f"><a href="./Space Heroes/writeup.html">Space Heroes CTF</a></h2>
+<div id="outline-container-org7273b12" class="outline-2">
+<h2 id="org7273b12"><a href="./JerseyCTFII/writeup.html">JerseyCTF II</a></h2>
 </div>
-<div id="outline-container-org444696e" class="outline-2">
-<h2 id="org444696e"><a href="../index.html">ÍNDICE GENERAL</a></h2>
+<div id="outline-container-orgf131a36" class="outline-2">
+<h2 id="orgf131a36"><a href="./Space Heroes/writeup.html">Space Heroes CTF</a></h2>
+</div>
+<div id="outline-container-orgfae1215" class="outline-2">
+<h2 id="orgfae1215"><a href="../index.html">ÍNDICE GENERAL</a></h2>
 </div>
 </div>
 <div id="postamble" class="status">
